--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,9 @@ html, body, #root {
     height: 100%;
     min-height: 100%;
 }
-
+.char-img{
+  width: 150px;
+}
 .header {
     background-color: #efefef;
 }
